Fix spacing, colors

--- a/frontend/src/metabase/list-view/components/ListView/ListView.module.css
+++ b/frontend/src/metabase/list-view/components/ListView/ListView.module.css
@@ -1,9 +1,31 @@
+.listViewContainer {
+  --max-width: 75rem;
+  background: var(--mb-color-background-light);
+  width: 100%;
+  height: 100%;
+  gap: var(--mantine-spacing-xs);
+  padding-top: var(--mantine-spacing-xl);
+  overflow: auto;
+  padding-inline: calc(50% - var(--max-width) / 2);
+}
+@media (max-width: 75rem) {
+  .listViewContainer {
+    padding-inline: 1rem;
+  }
+}
+
+.listContainer {
+  padding-inline: 1rem;
+  overflow: auto;
+}
+
 .listItem {
   cursor: pointer;
   border: 1px solid var(--mb-color-border);
   border-radius: var(--mantine-radius-md);
+  background: var(--mb-color-bg-white);
 
   &:hover {
-    background-color: color-mix(in srgb, var(--mb-color-brand), white 80%);
+    background-color: var(--mb-color-brand-lighter);
   }
 }
